--- a/team-05-08/src/application/AfterLogin.fxml
+++ b/team-05-08/src/application/AfterLogin.fxml
@@ -2,13 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AfterLogin">
    <top>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="69.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="logout" layoutX="682.0" layoutY="26.0" mnemonicParsing="false" onAction="#userLogout" text="Logout" />
             <Label layoutX="33.0" layoutY="13.0" prefHeight="51.0" prefWidth="480.0" text="List of recommendation letters">
@@ -19,19 +22,46 @@
          </children>
       </AnchorPane>
    </top>
-   <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </left>
-   <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </center>
    <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="400.0" prefWidth="63.0" BorderPane.alignment="CENTER" />
    </right>
-   <bottom>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="generateNew" layoutX="327.0" layoutY="100.0" mnemonicParsing="false" onAction="#userGenerate" prefHeight="46.0" prefWidth="146.0" text="Generate a new letter" />
-         </children></AnchorPane>
-   </bottom>
+   <left>
+      <BorderPane prefHeight="400.0" prefWidth="46.0" BorderPane.alignment="CENTER">
+         <bottom>
+            <BorderPane prefHeight="234.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <bottom>
+                  <AnchorPane prefHeight="281.0" prefWidth="655.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button fx:id="generateNew" layoutX="327.0" layoutY="100.0" mnemonicParsing="false" onAction="#userGenerate" prefHeight="46.0" prefWidth="146.0" text="Generate a new letter" />
+                     </children>
+                  </AnchorPane>
+               </bottom>
+            </BorderPane>
+         </bottom>
+         <top>
+            <BorderPane prefHeight="59.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <left>
+                  <Label fx:id="searchID" prefHeight="17.0" prefWidth="73.0" text="Search box: " BorderPane.alignment="CENTER" />
+               </left>
+               <center>
+                  <TextField fx:id="searchBox" prefHeight="25.0" prefWidth="283.0" promptText="Search for last name, first name, or year" BorderPane.alignment="CENTER" />
+               </center>
+               <right>
+                  <AnchorPane prefHeight="59.0" prefWidth="291.0" BorderPane.alignment="CENTER" />
+               </right>
+            </BorderPane>
+         </top>
+         <left>
+            <TableView fx:id="searchTable" prefHeight="161.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn fx:id="firstName" prefWidth="150.0" text="First name" />
+                <TableColumn fx:id="lastName" prefWidth="150.0" text="Last name" />
+                  <TableColumn fx:id="year" prefWidth="150.0" text="Year" />
+                  <TableColumn fx:id="edit" prefWidth="75.0" text="Edit" />
+                  <TableColumn fx:id="delete" prefWidth="75.0" text="Delete" />
+              </columns>
+            </TableView>
+         </left>
+      </BorderPane>
+   </left>
 </BorderPane>
