--- a/team-05-08/src/application/AfterLogin.fxml
+++ b/team-05-08/src/application/AfterLogin.fxml
@@ -29,12 +29,40 @@
       <BorderPane prefHeight="400.0" prefWidth="46.0" BorderPane.alignment="CENTER">
          <bottom>
             <BorderPane prefHeight="234.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <left>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+               </left>
+               <right>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+               </right>
+               <center>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <left>
+                        <Button fx:id="edit" mnemonicParsing="false" onAction="#editRowFromTable" text="Edit" BorderPane.alignment="CENTER" />
+                     </left>
+                     <center>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                     </center>
+                     <right>
+                        <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteRowFromTable" text="Delete" BorderPane.alignment="CENTER" />
+                     </right>
+                  </BorderPane>
+               </center>
                <bottom>
-                  <AnchorPane prefHeight="281.0" prefWidth="655.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Button fx:id="generateNew" layoutX="327.0" layoutY="100.0" mnemonicParsing="false" onAction="#userGenerate" prefHeight="46.0" prefWidth="146.0" text="Generate a new letter" />
-                     </children>
-                  </AnchorPane>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <left>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                     </left>
+                     <right>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                     </right>
+                     <bottom>
+                        <AnchorPane prefHeight="115.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+                     </bottom>
+                     <center>
+                        <Button fx:id="generateNew" mnemonicParsing="false" text="Generate a new letter" BorderPane.alignment="CENTER" />
+                     </center>
+                  </BorderPane>
                </bottom>
             </BorderPane>
          </bottom>
@@ -52,13 +80,12 @@
             </BorderPane>
          </top>
          <left>
-            <TableView fx:id="searchTable" prefHeight="161.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tableview" prefHeight="161.0" prefWidth="600.0" BorderPane.alignment="CENTER">
               <columns>
+                <TableColumn fx:id="id" prefWidth="150.0" text="id" />
                 <TableColumn fx:id="firstName" prefWidth="150.0" text="First name" />
-                <TableColumn fx:id="lastName" prefWidth="150.0" text="Last name" />
+                  <TableColumn fx:id="lastName" prefWidth="150.0" text="Last name" />
                   <TableColumn fx:id="year" prefWidth="150.0" text="Year" />
-                  <TableColumn fx:id="edit" prefWidth="75.0" text="Edit" />
-                  <TableColumn fx:id="delete" prefWidth="75.0" text="Delete" />
               </columns>
             </TableView>
          </left>
