--- a/team-05-08/src/application/SavedReco.fxml
+++ b/team-05-08/src/application/SavedReco.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -11,9 +12,10 @@
          <children>
             <StackPane prefHeight="606.0" prefWidth="631.0">
                <children>
-                  <AnchorPane minHeight="750.0" minWidth="830.0">
+                  <AnchorPane minHeight="750.0" minWidth="830.0" prefHeight="816.0" prefWidth="833.0">
                      <children>
-                        <TextArea fx:id="textname" layoutX="20.0" layoutY="73.0" prefHeight="643.0" prefWidth="790.0" wrapText="true" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+                        <TextArea fx:id="textname" layoutX="20.0" layoutY="73.0" prefHeight="643.0" prefWidth="790.0" wrapText="true" />
+                        <Button layoutX="372.0" layoutY="730.0" mnemonicParsing="false" onAction="#SaveButton" text="Button" />
                      </children>
                   </AnchorPane>
                </children>
