--- a/team-05-08/src/application/GenerateNew.fxml
+++ b/team-05-08/src/application/GenerateNew.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
@@ -26,11 +27,11 @@
       </BorderPane>
    </top>
    <bottom>
-      <BorderPane prefHeight="739.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="912.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <bottom>
-            <BorderPane prefHeight="697.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+            <BorderPane prefHeight="849.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                <center>
-                  <BorderPane prefHeight="144.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+                  <BorderPane prefHeight="143.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <left>
                         <Label prefHeight="18.0" prefWidth="128.0" text="Student's last name:" BorderPane.alignment="CENTER" />
                      </left>
@@ -76,7 +77,7 @@
                                  <bottom>
                                     <BorderPane prefHeight="476.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                                        <bottom>
-                                          <BorderPane prefHeight="396.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+                                          <BorderPane prefHeight="416.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                                              <left>
                                                 <Label text="List of student's personal characteristics: " BorderPane.alignment="CENTER" />
                                              </left>
@@ -84,10 +85,11 @@
                                                 <BorderPane prefHeight="73.0" prefWidth="333.0" BorderPane.alignment="CENTER">
                                                    <center>
                                                       <Label text="Press Ctrl for multi select" BorderPane.alignment="CENTER" />
-                                                   </center></BorderPane>
+                                                   </center>
+                                                </BorderPane>
                                              </right>
                                              <bottom>
-                                                <BorderPane prefHeight="323.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+                                                <BorderPane prefHeight="362.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                                                    <left>
                                                       <Label text="List of student's academic characteristics: " BorderPane.alignment="CENTER" />
                                                    </left>
@@ -95,27 +97,30 @@
                                                       <BorderPane prefHeight="53.0" prefWidth="327.0" BorderPane.alignment="CENTER">
                                                          <center>
                                                             <Label text="Press Ctrl for multi select" BorderPane.alignment="CENTER" />
-                                                         </center></BorderPane>
+                                                         </center>
+                                                      </BorderPane>
                                                    </right>
                                                    <bottom>
-                                                      <BorderPane prefHeight="270.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+                                                      <BorderPane prefHeight="284.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                                                          <center>
-                                                            <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                                            <BorderPane prefHeight="106.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                                                                <left>
                                                                   <Button fx:id="generateButton" mnemonicParsing="false" onAction="#userGenerateNew" prefHeight="31.0" prefWidth="86.0" text="Compile" BorderPane.alignment="CENTER" />
                                                                </left>
                                                                <right>
                                                                   <Button fx:id="cancelButton1" mnemonicParsing="false" onAction="#userCancel1" prefHeight="31.0" prefWidth="82.0" text="Cancel" BorderPane.alignment="CENTER" />
-                                                               </right></BorderPane>
+                                                               </right>
+                                                            </BorderPane>
                                                          </center>
                                                          <bottom>
                                                             <BorderPane prefHeight="6.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                                                                <top>
-                                                                  <BorderPane prefHeight="211.0" prefWidth="800.0" BorderPane.alignment="CENTER" />
-                                                               </top></BorderPane>
+                                                                  <BorderPane prefHeight="140.0" prefWidth="800.0" BorderPane.alignment="CENTER" />
+                                                               </top>
+                                                            </BorderPane>
                                                          </bottom>
                                                          <left>
-                                                            <BorderPane prefHeight="59.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
+                                                            <BorderPane prefHeight="77.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
                                                          </left>
                                                          <right>
                                                             <BorderPane prefHeight="59.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
@@ -123,23 +128,23 @@
                                                       </BorderPane>
                                                    </bottom>
                                                    <center>
-                                                      <ListView fx:id="academicCharacteristics" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                                                      <ListView fx:id="academicCharacteristics" prefHeight="120.0" prefWidth="253.0" BorderPane.alignment="CENTER" />
                                                    </center>
+                                                   <top>
+                                                      <AnchorPane prefHeight="11.0" prefWidth="800.0" BorderPane.alignment="CENTER" />
+                                                   </top>
                                                 </BorderPane>
                                              </bottom>
                                              <center>
-                                                <ListView fx:id="personalCharacteristics" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                                                <ListView fx:id="personalCharacteristics" prefHeight="87.0" prefWidth="252.0" BorderPane.alignment="CENTER" />
                                              </center>
                                           </BorderPane>
                                        </bottom>
                                        <left>
-                                          <BorderPane prefHeight="80.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+                                          <BorderPane prefHeight="233.0" prefWidth="640.0" BorderPane.alignment="CENTER">
                                              <left>
                                                 <Label text="List of other courses taken with the same professor: " BorderPane.alignment="CENTER" />
                                              </left>
-                                             <top>
-                                                <Button mnemonicParsing="false" onAction="#addcourse" text="add" BorderPane.alignment="CENTER" />
-                                             </top>
                                              <right>
                                                 <TextField fx:id="gradeField" prefHeight="26.0" prefWidth="137.0" promptText="letter grade" BorderPane.alignment="CENTER">
                                                    <BorderPane.margin>
@@ -150,13 +155,27 @@
                                              <center>
                                                 <ComboBox fx:id="courseTaken" prefWidth="150.0" BorderPane.alignment="CENTER" />
                                              </center>
+                                             <bottom>
+                                                <ListView fx:id="listviewcourse" prefHeight="131.0" prefWidth="640.0" BorderPane.alignment="CENTER" />
+                                             </bottom>
                                           </BorderPane>
                                        </left>
                                        <right>
                                           <BorderPane prefHeight="80.0" prefWidth="145.0" BorderPane.alignment="CENTER">
                                              <top>
-                                                <Label prefHeight="28.0" prefWidth="162.0" text="Press Ctrl to multi select" BorderPane.alignment="CENTER" />
-                                             </top></BorderPane>
+                                                <BorderPane prefHeight="169.0" prefWidth="145.0" BorderPane.alignment="CENTER">
+                                                   <left>
+                                                      <Button mnemonicParsing="false" onAction="#addcourse" prefHeight="25.0" prefWidth="37.0" text="add" BorderPane.alignment="CENTER" />
+                                                   </left>
+                                                   <bottom>
+                                                      <AnchorPane prefHeight="86.0" prefWidth="145.0" BorderPane.alignment="CENTER" />
+                                                   </bottom>
+                                                </BorderPane>
+                                             </top>
+                                             <bottom>
+                                                <AnchorPane prefHeight="46.0" prefWidth="145.0" BorderPane.alignment="CENTER" />
+                                             </bottom>
+                                          </BorderPane>
                                        </right>
                                     </BorderPane>
                                  </bottom>
@@ -189,8 +208,9 @@
                      <right>
                         <BorderPane prefHeight="26.0" prefWidth="310.0" BorderPane.alignment="CENTER">
                            <center>
-                              <Label fx:id="warningSign" text="Label" BorderPane.alignment="CENTER" />
-                           </center></BorderPane>
+                              <Label fx:id="warningSign" BorderPane.alignment="CENTER" />
+                           </center>
+                        </BorderPane>
                      </right>
                      <center>
                         <TextField fx:id="schoolName" prefHeight="26.0" prefWidth="150.0" promptText="School name" BorderPane.alignment="CENTER" />
@@ -200,7 +220,7 @@
             </BorderPane>
          </bottom>
          <left>
-            <BorderPane prefHeight="26.0" prefWidth="405.0" BorderPane.alignment="CENTER">
+            <BorderPane prefHeight="133.0" prefWidth="405.0" BorderPane.alignment="CENTER">
                <left>
                   <Label prefHeight="18.0" prefWidth="127.0" text="Student's first name:" BorderPane.alignment="CENTER" />
                </left>
@@ -211,7 +231,8 @@
                   <BorderPane prefHeight="26.0" prefWidth="39.0" BorderPane.alignment="CENTER">
                      <left>
                         <BorderPane prefHeight="26.0" prefWidth="141.0" BorderPane.alignment="CENTER" />
-                     </left></BorderPane>
+                     </left>
+                  </BorderPane>
                </right>
             </BorderPane>
          </left>
@@ -222,14 +243,12 @@
                </center>
                <left>
                   <Label prefHeight="18.0" prefWidth="34.0" text="Date:" BorderPane.alignment="CENTER" />
-               </left></BorderPane>
+               </left>
+            </BorderPane>
          </right>
-         <top>
-            <BorderPane prefHeight="157.0" prefWidth="800.0" BorderPane.alignment="CENTER">
-               <center>
-                  <ListView fx:id="listviewcourse" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-               </center></BorderPane>
-         </top>
       </BorderPane>
    </bottom>
+   <center>
+      <AnchorPane prefHeight="76.0" prefWidth="800.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
